# rFBP

./: .codacy.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  MANIFEST.in  Makefile  README.md  SOURCES.txt  appveyor.yml  build.ps1  build.sh  coverage.xml  pyproject.toml  rFBP.pc.in  rFBPConfig.cmake.in  requirements.txt  setup.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  config.yml
.github/workflows/: cpp.yml  docs.yml  python.yml
ReplicatedFocusingBeliefPropagation/: CMakeLists.txt  Fprotocol.pyx  Pattern.pyx  ReplicatedFocusingBeliefPropagation.pyx  __init__.py  __version__.py  __version__.py.in  _mag.pyd  build.py  dependencies.json
ReplicatedFocusingBeliefPropagation/example/: overall_example.py  runtest.py  runtrain.py
ReplicatedFocusingBeliefPropagation/include/: fprotocol.pxd  mag.pxd  misc.hpp  misc.pxd  pattern.pxd  rfbp.pxd
ReplicatedFocusingBeliefPropagation/lib/: FocusingProtocol.pxd  MagP64.pxd  MagT64.pxd  Patterns.pxd  __init__.pxd  atanherf.pxd  magnetization.pxd  misc.hpp  misc.pxd  rfbp.pxd
ReplicatedFocusingBeliefPropagation/rfbp/: FocusingProtocol.py  Mag.py  MagP64.py  MagT64.py  Patterns.py  ReplicatedFocusingBeliefPropagation.py  __init__.py  atanherf.py  magnetization.py  misc.py
ReplicatedFocusingBeliefPropagation/rfbp/test/: test_atanherf.py  test_fprotocol.py  test_mag.py  test_magnetization.py  test_magp64.py  test_magt64.py  test_misc.py  test_pattern.py  test_rfbp.py
ReplicatedFocusingBeliefPropagation/source/: CMakeLists.txt  FocusingProtocol.py  FocusingProtocol.pyx  Patterns.py  Patterns.pyx  ReplicatedFocusingBeliefPropagation.py  atanherf.pyx  misc.py  rFBP.pyx
cmake/: UseCython.cmake
docker/: Dockerfile  run.ps1  run.sh
docs/: CMakeLists.txt  Doxyfile.in  _config.yml  authors.md  cpp_install.md  index.md  model.md  python_install.md  requirements.txt
docs/sphinxtext/source/: CMake.rst  Python.rst  conf.py  index.rst  installation.rst  references.rst  theory.rst
docs/sphinxtext/source/cppAPI/: FocusingProtocol.rst  Mag.rst  MagP64.rst  MagT64.rst  Patterns.rst  ReplicatedFocusingBeliefPropagation.rst  atanherf.rst  cavity_message.rst  magnetization.rst  modules.rst  params.rst
docs/sphinxtext/source/doxydoc/: atanherf_8h.xml  cavity__message_8h.xml  classArgumentParser.xml  classCavity__Message.xml  classFocusingProtocol.xml  classParams.xml  classPatterns.xml  class_cavity___message.xml  class_focusing_protocol.xml  class_params.xml  class_patterns.xml  classargument.xml  classband__matrix.xml  classspline.xml  cmd_8h.xml  dir_75cf5697b083d08aa1a1e216efe18419.xml  dir_911b18c25225ad5cb4ae7480cb868c47.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_ebc50e4734e3e606349e003acfeabc1f.xml  errors_8h.xml  fprotocol_8h.xml  index.xml  magP_8h.xml  magT_8h.xml  mag_p_8h.xml  mag_t_8h.xml  magnetization_8h.xml  magnetization__oldgcc_8h.xml  namespaceAtanhErf.xml  namespace_atanh_erf.xml  namespacemag.xml  namespacestd.xml  params_8h.xml  parse__args_8h.xml  pattern_8h.xml  rfbp_8h.xml  spline_8h.xml  structMagP64.xml  structMagT64.xml  struct_mag_p64.xml  (+2 more)
docs/sphinxtext/source/pyAPI/: FocusingProtocol.rst  Mag.rst  MagP64.rst  MagT64.rst  Patterns.rst  ReplicatedFocusingBeliefPropagation.rst  atanherf.rst  magnetization.rst  modules.rst
example/: main.cpp  test_main.cpp  train_main.cpp
hpp/: cavity_message.hpp  magnetization.hpp  magnetization_oldgcc.hpp  params.hpp  parse_args.hpp  parse_args_old.hpp  rfbp.hpp  utils.hpp
include/: atanherf.h  cavity_message.h  cmd.h  errors.h  fprotocol.h  magP.h  magT.h  magnetization.h  magnetization.hpp  magnetization_oldgcc.h  magnetization_oldgcc.hpp  params.h  parse_args.h  pattern.h  rfbp.h  rfbp.hpp  spline.h  utils.h
paper/: paper.bib  paper.md
publications/: README.md
scripts/: download_atanherf.py
src/: atanherf.cpp  cavity_message.cpp  cmd.cpp  fprotocol.cpp  magnetization.cpp  params.cpp  parse_args.cpp  pattern.cpp  rfbp.cpp  spline.cpp  utils.cpp
test/: CMakeLists.txt  run_test.sh  spline_test.cpp  test_atanherf.cpp  test_fprotocol.cpp  test_magnetization.cpp  test_magp.cpp  test_magt.cpp  test_params.cpp  test_pattern.cpp  test_rfbp.cpp  test_spline.cpp
tst/: main.cpp
